@@ -1,6 +1,8 @@
 PHP 4.0                                                                    NEWS
 |||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
 ?? ??? 200?, Version 4.1.0
+- Fixed a bug in WDDX deserialization that would sometimes corrupp the root
+  element if it was a scalar one. (Andrei)
 - Make ImageColorAt() and ImageColorsForIndex() work with TrueColor images.
   (Rasmus)
 - Fixed a bug preg_match_all() that would return results under improper indices
